# squawk-pre-commit

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
.github/workflows/: auto-tag.yml  ci.yml  release.yml  version-check.yml
squawk_alembic/: hook.py
tests/: test_autocommit_check.py  test_extract_sql.py  test_find_migrations_path.py  test_main.py  test_revision_info.py  test_squawk_config.py
